k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
    - port: 4499
      targetPort: 4499
      nodePort: 31499
      protocol: TCP
      name: http
